# peace-packages

./: ProjectHome.md
Daisy/: CHANGELOG  TODO  plasma-applet-daisy-0.0.4.25.kdev4
Daisy/applet/po/: CMakeLists.txt  Messages.sh  bs.po  de.po  hu.po  pt.po  sr.po  tr.po
Daisy/applet/src/: daisy.h  daisyFx.cpp  daisyIcon.cpp  daisyLaunchers.cpp  daisyPlug_trash.cpp
Daisy/applet/ui/: launcherConfiguration.ui
Daisy/doc/: daisy_homepage
trunk/Daisy/: AUTHORS  CMakeLists.txt  INSTALL  README
trunk/Daisy/applet/: CMakeLists.txt
trunk/Daisy/applet/po/: el.po  fr.po  it.po  pl.po  plasma_applet_daisy.pot  ru.po
trunk/Daisy/applet/src/: daisy.cpp  daisyConfig.cpp  daisyDialogs.cpp  daisyDrawers.cpp  daisyMediaControl.cpp  daisyTasks.cpp
trunk/Daisy/applet/ui/: .directory  advancedConfiguration.ui  appearanceConfiguration.ui  arrangementConfiguration.ui  hidingConfiguration.ui  mainConfiguration.ui
